[gd_scene load_steps=18 format=3 uid="uid://cls1swwtsym3b"]

[ext_resource type="Script" path="res://Levels/Market/Inventory/scripts/market.gd" id="1_2s88l"]
[ext_resource type="FontFile" uid="uid://drvp2bgeyn50f" path="res://assets/fonts/default_font.png" id="1_h73b4"]
[ext_resource type="Texture2D" uid="uid://cqo8wunpfetpi" path="res://assets/sprites/inv_slot.png" id="2_3tol7"]
[ext_resource type="Script" path="res://GUI/inventory/scripts/inventory_ui.gd" id="3_el2qe"]
[ext_resource type="Resource" uid="uid://dgm3mj0mqqjqw" path="res://characters/Player/player_inv.tres" id="4_k6gsm"]
[ext_resource type="Script" path="res://Levels/Market/Inventory/scripts/market_inventory_ui.gd" id="4_ujkwd"]
[ext_resource type="Resource" uid="uid://r18ebc1j05wx" path="res://Levels/Market/Inventory/market_inventory.tres" id="5_hw1hh"]
[ext_resource type="FontFile" uid="uid://df6bu6cgyxf6v" path="res://assets/fonts/small_font.png" id="6_jfowk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ept5i"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = ExtResource("2_3tol7")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8kpn6"]
bg_color = Color(0.655076, 0.37778, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qg43e"]
bg_color = Color(0.592157, 0.694118, 0.176471, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(7.90548e-06, 0.461779, 0.0757143, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o743x"]
bg_color = Color(0.655076, 0.37778, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_av4qk"]
bg_color = Color(0.858824, 0.219608, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.319252, 0.203559, 4.81308e-08, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3pfoq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d3c4j"]
bg_color = Color(0.690196, 0.0235294, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jmwq6"]
bg_color = Color(0.655076, 0.37778, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cd03x"]
bg_color = Color(0.858824, 0.501961, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.319252, 0.203559, 4.81308e-08, 1)
corner_detail = 1

[node name="Market" type="CanvasLayer"]
script = ExtResource("1_2s88l")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_right = 1.001
anchor_bottom = 1.0
offset_right = -0.366089
offset_bottom = -1.0

[node name="ColorRect" type="ColorRect" parent="Control"]
custom_minimum_size = Vector2(1366, 768)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.254059, 0.113114, 0.0595657, 1)

[node name="ColorRect2" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.048
anchor_top = 0.087
anchor_right = 0.949
anchor_bottom = 0.893
offset_left = 0.384003
offset_top = -0.729004
offset_right = -0.38208
offset_bottom = -2.73706
grow_horizontal = 2
grow_vertical = 2
color = Color(0.447059, 0.219608, 0.133333, 1)

[node name="Title" type="Label" parent="Control"]
process_mode = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.19
anchor_top = 0.034
anchor_right = 0.815
anchor_bottom = 0.102
offset_left = 16.27
offset_top = 59.922
offset_right = -69.48
offset_bottom = 59.7823
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_h73b4")
theme_override_font_sizes/font_size = 32
text = "THE MARKET OF VILGUARDIA"

[node name="MarketInv" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.089
anchor_top = 0.306
anchor_right = 0.349
anchor_bottom = 0.416
offset_left = -0.663033
offset_top = 0.297974
offset_right = -0.0830383
offset_bottom = -0.0720215
theme_override_styles/panel = SubResource("StyleBoxTexture_ept5i")

[node name="GridContainer" type="GridContainer" parent="Control/MarketInv"]
layout_mode = 2
columns = 5
script = ExtResource("4_ujkwd")
data = ExtResource("5_hw1hh")

[node name="PlayerInv" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.371
anchor_top = 0.302
anchor_right = 0.632
anchor_bottom = 0.417
offset_left = 385.843
offset_top = 2.366
offset_right = 385.317
offset_bottom = 66.161
theme_override_styles/panel = SubResource("StyleBoxTexture_ept5i")

[node name="GridContainer" type="GridContainer" parent="Control/PlayerInv"]
layout_mode = 2
columns = 5
script = ExtResource("3_el2qe")
data = ExtResource("4_k6gsm")

[node name="BuyContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.09
anchor_top = 0.602
anchor_right = 0.253
anchor_bottom = 0.667
offset_left = -0.0300064
offset_top = 0.26593
offset_right = -0.850983
offset_bottom = 0.41095

[node name="BuyButton" type="Button" parent="Control/BuyContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h73b4")
theme_override_styles/hover = SubResource("StyleBoxFlat_8kpn6")
theme_override_styles/normal = SubResource("StyleBoxFlat_qg43e")
text = "BUY"

[node name="SellContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.698
anchor_top = 0.615
anchor_right = 0.908
anchor_bottom = 0.681
offset_left = -0.166016
offset_top = 0.294983
offset_right = -0.236084
offset_bottom = -0.327026
theme_override_constants/separation = 7

[node name="SellButton" type="Button" parent="Control/SellContainer"]
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h73b4")
theme_override_styles/hover = SubResource("StyleBoxFlat_o743x")
theme_override_styles/normal = SubResource("StyleBoxFlat_av4qk")
text = "SELL"

[node name="SellAllButton" type="Button" parent="Control/SellContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h73b4")
theme_override_styles/hover = SubResource("StyleBoxFlat_3pfoq")
theme_override_styles/normal = SubResource("StyleBoxFlat_d3c4j")
text = "SELL ALL"

[node name="PurchasableItemsTitle2" type="Label" parent="Control"]
process_mode = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.573
anchor_top = 0.242
anchor_right = 0.912
anchor_bottom = 0.31
offset_left = -0.291016
offset_top = 0.385986
offset_right = -0.365112
offset_bottom = 0.162003
grow_horizontal = 2
theme_override_colors/font_color = Color(0.971519, 0.848288, 2.31028e-06, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 11
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("6_jfowk")
theme_override_font_sizes/font_size = 18
text = "Available items to sell"
horizontal_alignment = 2
autowrap_mode = 2

[node name="PurchasableItemsTitle" type="Label" parent="Control"]
process_mode = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.354
anchor_top = 0.251
anchor_right = 0.656
anchor_bottom = 0.284
offset_left = -368.918
offset_top = -2.517
offset_right = -369.45
offset_bottom = -2.86099
grow_horizontal = 2
theme_override_colors/font_color = Color(0.971519, 0.848288, 2.31028e-06, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 11
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("6_jfowk")
theme_override_font_sizes/font_size = 18
text = "Available items to buy"
horizontal_alignment = 1
autowrap_mode = 2

[node name="PlayerMoneyLabel" type="Label" parent="Control"]
process_mode = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.354
anchor_top = 0.251
anchor_right = 0.656
anchor_bottom = 0.284
offset_left = -29.918
offset_top = 450.483
offset_right = -27.45
offset_bottom = 449.139
grow_horizontal = 2
theme_override_colors/font_color = Color(0.971519, 0.848288, 2.31028e-06, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 11
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("6_jfowk")
theme_override_font_sizes/font_size = 18
text = "Available money: 0c"
autowrap_mode = 2

[node name="SellableItemLabel" type="Label" parent="Control"]
process_mode = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.354
anchor_top = 0.251
anchor_right = 0.656
anchor_bottom = 0.284
offset_left = 443.082
offset_top = 212.483
offset_right = 334.55
offset_bottom = 212.139
grow_horizontal = 2
theme_override_colors/font_color = Color(0.971519, 0.848288, 2.31028e-06, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 11
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("6_jfowk")
theme_override_font_sizes/font_size = 18
horizontal_alignment = 2
autowrap_mode = 2

[node name="BuyableItemLabel" type="Label" parent="Control"]
process_mode = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.354
anchor_top = 0.251
anchor_right = 0.656
anchor_bottom = 0.284
offset_left = -360.918
offset_top = 211.483
offset_right = -469.45
offset_bottom = 211.139
grow_horizontal = 2
theme_override_colors/font_color = Color(0.971519, 0.848288, 2.31028e-06, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 11
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("6_jfowk")
theme_override_font_sizes/font_size = 18
autowrap_mode = 2

[node name="ColorRect3" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.578
anchor_top = 0.305
anchor_right = 0.631
anchor_bottom = 0.5
offset_left = -1.12604
offset_top = 0.0649872
offset_right = -0.524048
offset_bottom = 0.304993
color = Color(0.458824, 0.458824, 0.458824, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.578
anchor_top = 0.303
anchor_right = 0.631
anchor_bottom = 0.5
offset_left = -1.12604
offset_top = 0.598999
offset_right = -0.524048
offset_bottom = 0.303009
alignment = 1

[node name="PlusButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h73b4")
theme_override_font_sizes/font_size = 28
text = "+"

[node name="SellResCount" type="Label" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h73b4")
text = "14"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MinusButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h73b4")
theme_override_font_sizes/font_size = 28
text = "-"

[node name="ExitContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.389
anchor_top = 0.626
anchor_right = 0.575
anchor_bottom = 0.736
offset_left = -0.763
offset_top = 0.857971
offset_right = -0.83905
offset_bottom = 0.377991

[node name="ExitButton" type="Button" parent="Control/ExitContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h73b4")
theme_override_styles/hover = SubResource("StyleBoxFlat_jmwq6")
theme_override_styles/normal = SubResource("StyleBoxFlat_cd03x")
text = "EXIT THE MARKET"

[connection signal="pressed" from="Control/BuyContainer/BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="Control/SellContainer/SellButton" to="." method="_on_sell_button_pressed"]
[connection signal="pressed" from="Control/SellContainer/SellAllButton" to="." method="_on_sell_all_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/PlusButton" to="." method="_on_plus_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/MinusButton" to="." method="_on_minus_button_pressed"]
[connection signal="pressed" from="Control/ExitContainer/ExitButton" to="." method="_on_exit_button_pressed"]
